--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
   <!-- Use Kamela logo as site icon (PNG) to avoid stale favicon cache -->
-  <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo.png" />
+  <!-- Explicit favicon.ico fallback and cache-bust to ensure browsers update the tab icon -->
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=2" />
+  <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/logo192.png?v=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
